# web-scraper-arg

./: README.md  pyproject.toml
src/: main.py  main_test.py
src/data/: 20230330_145647_argenprop_webscrap.csv  20230330_145648_meli_webscrap.csv  20230330_145650_zonaprop_webscrap.csv  20230330_171203_argenprop_webscrap.csv  20230330_171205_meli_webscrap.csv  20230330_171208_zonaprop_webscrap.csv  20230330_172740_meli_webscrap.csv  20230330_172742_zonaprop_webscrap.csv
src/objects/: browser.py  inputer.py  parser.py  register.py  site.py
src/profiles/: argenprop.yaml  general.yaml  meli.yaml  zonaprop.yaml
